sofashop website built with HTML ,CSS & JS

--- a/index.html
+++ b/index.html
@@ -24,17 +24,23 @@
       <h2 class="sofa-middleheading">Sofa<span>Shop</span></h2>
     </div>
     <div class="sofa-right">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Categories</a></li>
-        <li><a href="#">Offers</a></li>
-        <li><a href="#">Sales</a></li>
-        <li><a href="#">Coupons</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul>
-      <div class="sofa-textbox">
-        <h1>We are</h1>
-        <h1 style="margin-left: 7rem; color: #E48A00;">Sofas</h1>
+      <div class="sofa-rightbg">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Categories</a></li>
+          <li><a href="#">Offers</a></li>
+          <li><a href="#">Sales</a></li>
+          <li><a href="#">Coupons</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <div class="sofa-textbox">
+          <h1>We are</h1>
+          <h1 style="margin-left: 7rem; color: #E48A00;">Sofas</h1>
+        </div>
+      </div>
+      <div class="sofa-button" style="border: 2px solid #E48A00;">
+          <i class="fa-solid fa-angle-left"></i>
+          <i class="fa-solid fa-angle-right"></i>
       </div>
     </div>
   </section>
