--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
       </div>
     </div>
   </section>
+  <div class="sofa-placecard-container">
+    <div class="sofa-placecard">
+      <h3>MCKENZIE</h3>
+      <h1>Twin Amber Sofa</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna 
+        aliqua Ut enim ad minim veniam, quis nostrud exercitation
+      </p>
+      <a href="#">Add To Cart</a>
+    </div>
+  </div>
   
 </body>
 </html>
