sofashop website built with HTML ,CSS & JS

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         </ul>
         <div class="sofa-textbox">
           <h1>We are</h1>
-          <h1 style="margin-left: 7rem; color: #E48A00;">Sofas</h1>
+          <h1 style="margin-left: 6.5rem; color: #E48A00;">Sofas</h1>
         </div>
+        <h1 class="sofa-rightnum">01</h1>
       </div>
       <div class="sofa-button" style="border: 2px solid #E48A00;">
           <i class="fa-solid fa-angle-left"></i>
