sofashop website built with HTML ,CSS & JS

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <h1 class="sofa-rightnum">01</h1>
       </div>
-      <div class="sofa-button" style="border: 2px solid #E48A00;">
+      <div class="sofa-button">
           <i class="fa-solid fa-angle-left"></i>
           <i class="fa-solid fa-angle-right"></i>
       </div>
