sofashop website built with HTML ,CSS & JS

--- a/index.html
+++ b/index.html
@@ -11,13 +11,43 @@
 <body>
   <section class="hero-container">
     <div class="sofa-left">
-      <div class="sofa-icon"><i class="fa-solid fa-chair"></i></div>
+      <div class="sofa-logo"><i class="fa-solid fa-chair"></i></div>
       <div class="sofa-leftsocial">
-        <ul>
-          <li><a href="#">INSTAGRAM</a></li>
-          <li><a href="#">TWITTER</a></li>
-          <li><a href="#">FACEBOOK</a></li>
-        </ul>
+        <div class="social">
+          <p>M</p>
+          <p>A</p>
+          <p>R</p>
+          <p>G</p>
+          <p>A</p>
+          <p>T</p>
+          <p>S</p>
+          <p>N</p>
+          <p>I</p>
+        </div>
+
+        <div class="social">
+          <p>R</p>
+          <p>E</p>
+          <p>T</p>
+          <p>T</p>
+          <p>I</p>
+          <p>W</p>
+          <p>T</p>
+        </div>
+
+        <div class="social">
+          <p>K</p>
+          <p>O</p>
+          <p>O</p>
+          <p>B</p>
+          <p>E</p>
+          <p>C</p>
+          <p>A</p>
+          <p>F</p>
+        </div>
+
+        <div style="width: 5px; height:100px; background-color:#8B8B8B; margin-bottom: 15px;"></div>
+        
       </div>
     </div>
     <div class="sofa-middle">
