sofashop website built with HTML ,CSS & JS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./img/sofafavicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
@@ -15,6 +19,12 @@
       <div class="sofa-logo"><i class="fa-solid fa-chair"></i></div>
       <div class="sofa-leftsocial">
         <div class="social">
+          <span class="instagram"><a href="#">Instagram</a></span>
+          <span class="twitter"><a href="#">Twitter</a></span>
+          <span class="facebook"><a href="#">Facebook</a></span>
+          <div class="social-line"></div>
+        </div>
+        <!-- <div class="social">
           <p>M</p>
           <p>A</p>
           <p>R</p>
@@ -45,9 +55,9 @@
           <p>C</p>
           <p>A</p>
           <p>F</p>
-        </div>
+        </div> -->
 
-        <div style="width: 5px; height:100px; background-color:#8B8B8B; margin-bottom: 15px;"></div>
+        <!-- <div style="width: 5px; height:100px; background-color:#8B8B8B; margin-bottom: 15px;"></div> -->
         
       </div>
     </div>
